# Banking-System

./: README.md  pyproject.toml
src/: main.py
src/application/: service.py
src/config/: dbconfig.py
src/domain/: model.py
src/test/: test.py
