[project]
name = "banking-system-event-sourcing"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]
[tool.poetry.dependencies]
python = "^3.8"
eventsourcing = { version = "~9.3" }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
